# gpu_profiler_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
direct_test/: CMakeLists.txt
direct_test/hook_test/: CMakeLists.txt  hook_test.cpp
direct_test/overhead_test/: CMakeLists.txt
libs/detours/: detours.lib  syelog.lib
libs/minhook/: minhook.x64.lib
src/: dll_main.cpp
src/core/: gpc.cpp  gpc.h  gpc_analyzer.cpp  gpc_analyzer.h  gpc_common.h  gpc_d3d12_helper.cpp  gpc_d3d12_helper.h  gpc_defines.h  gpc_etw_manager.cpp  gpc_etw_manager.h  gpc_helper.cpp  gpc_helper.h  gpc_hud.cpp  gpc_hud.h  gpc_inspector.cpp  gpc_inspector.h  gpc_internal.h  gpc_object_tracker.h  gpc_object_tracker_manager.cpp  gpc_object_tracker_manager.h  gpc_optimizer.cpp  gpc_optimizer.h  gpc_perf_counter.cpp  gpc_perf_counter.h  gpc_perf_marker.cpp  gpc_perf_marker.h  gpc_process_manager.cpp  gpc_process_manager.h  gpc_shared.h  gpc_struct.h  gpc_timestamp_manager.cpp  gpc_timestamp_manager.h  gpc_tracker.cpp  gpc_tracker.h
src/core/tracker/: gpc_command_queue_tracker.cpp  gpc_command_queue_tracker.h  gpc_device_tracker.cpp  gpc_device_tracker.h  gpc_object_tracker.cpp  gpc_object_tracker.h  gpc_swapchain_tracker.cpp  gpc_swapchain_tracker.h
src/hook/: gpc_hook_defines.h  gpc_hook_manager.cpp  gpc_hook_manager.h  gpc_hook_utils.cpp  gpc_hook_utils.h
src/hook/cuda/: cuda_hook.cpp  hook_cuda.cpp  hook_cuda.h
src/hook/dx/: d3d12_hook.cpp  d3d12_hook.h  dxgi_hook.cpp  dxgi_hook.h  hook_d3d12.cpp  hook_d3d12.h  hook_dxgi.cpp  hook_dxgi.h
src/hook/ogl/: hook_ogl.cpp  hook_ogl.h
src/hook/sys/: hook_sys.cpp  sys_hook.cpp  sys_hook.h
src/hook/vk/: hook_vk.cpp  hook_vk.h  vk_hook.cpp
src/report/: gpc_data_manager.cpp  gpc_data_manager.h  gpc_report_generator.cpp  gpc_report_generator.h
src/utils/: d3dx12.h  gpc_logger.cpp  gpc_logger.h  gpc_memory_pool.cpp  gpc_memory_pool.h  gpc_metadata.cpp  gpc_metadata.h  gpc_utils.cpp  gpc_utils.h  gpc_vtable_parser.cpp  gpc_vtable_parser.h
tools/: CMakeLists.txt
tools/vtable_parser/: CMakeLists.txt  vtable_parser.cpp
